--- a/WeatherApp/app/src/main/res/layout/setting_others.xml
+++ b/WeatherApp/app/src/main/res/layout/setting_others.xml
@@ -134,7 +134,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="About"
+                android:text="About us"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
