--- a/WeatherApp/app/src/main/res/layout/list_item_detail_setting.xml
+++ b/WeatherApp/app/src/main/res/layout/list_item_detail_setting.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp">
+    android:paddingTop="6dp"
+    android:paddingBottom="6dp"
+    android:background="@drawable/drawer_selector_item">
 
     <TextView
         android:id="@+id/txt_detail_setting"
@@ -24,7 +26,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="16dp"
-        android:padding="8dp"
+        android:padding="4dp"
         android:src="@drawable/check"
         android:visibility="invisible" />
 
