--- a/WeatherApp/app/src/main/res/layout/activity_setting_detail.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_setting_detail.xml
@@ -22,17 +22,19 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:background="@color/white"
         app:cardElevation="2dp"
-        app:cardCornerRadius="0dp">
+        app:cardCornerRadius="2dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:fadeScrollbars="true"
             android:scrollbars="vertical" />
 
