--- a/WeatherApp/app/src/main/res/layout/setting_general.xml
+++ b/WeatherApp/app/src/main/res/layout/setting_general.xml
@@ -27,6 +27,7 @@
             android:textSize="15sp" />
 
         <LinearLayout
+            android:id="@+id/layout_setting_data_source"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -59,6 +60,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_setting_update_interval"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/drawer_selector_item"
@@ -90,6 +92,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layout_user_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/drawer_selector_item"
@@ -109,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="Forecast" />
+                android:text="User 1" />
 
             <View
                 android:layout_width="match_parent"
